Modify some bugs on Mobile Variation

--- a/styles/generalstyle.css
+++ b/styles/generalstyle.css
@@ -172,7 +172,7 @@ p a:hover {
   }
 
   #faq {
-    width: 50%;
+    width: 90%;
     padding: 20px;
   }
 
